# orkester

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  copilot-specs.md  example.rs  log.txt  logs.txt  plan.md  todo.md  unsleep.ps1
crates/common/: Cargo.toml
crates/common/src/: domain.rs  lib.rs  messaging.rs  plugin.rs
crates/common/src/logging/: consumer.rs  filter.rs  log.rs  logger.rs  mod.rs
crates/common/src/logging/consumers/: console.rs  file.rs  mod.rs
crates/common/src/plugin/: mod.rs  servers.rs
crates/common/src/plugin/providers/: auth.rs  authz.rs  executor.rs  mod.rs  persistence.rs  registry.rs
crates/common/src/plugin/servers/: metrics.rs  mod.rs  rest.rs  state.rs  workflow.rs
crates/common/src/providers/: auth.rs  authz.rs  registry.rs
crates/common/src/servers/: metrics.rs  mod.rs  rest.rs  state.rs  workflow.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  main.rs  main_logging.rs  management.rs  plugins.rs  servers.rs  types.rs
crates/core/src/config/: access.rs  json_loader.rs  loader.rs  mod.rs  toml_loader.rs  yaml_loader.rs
crates/core/src/logging/: config.rs  consumer.rs  init.rs  level.rs  log.rs  logger.rs  macros.rs  mod.rs
crates/core/src/logging/consumers/: console.rs  file.rs  mod.rs
crates/core/src/messaging/: channel.rs  hub.rs  mod.rs
crates/core/src/plugin/: loaded.rs  mod.rs
crates/core/src/registry/: mod.rs
crates/core/src/server/: config.rs  mod.rs  runner.rs
crates/plugin-core/: Cargo.toml
crates/plugin-core/src/: auth.rs  authz.rs  executor.rs  lib.rs  persistence.rs  registry.rs
crates/plugin-core/src/executor/: commands.rs  container.rs  mod.rs
crates/plugin-core/src/persistence/: memory.rs
crates/plugin-core/src/servers/: metrics.rs  mod.rs  rest.rs  state.rs  workflow.rs
crates/plugin-core/src/servers/metrics/: rest_api.rs
crates/plugin-core/src/servers/rest/: handlers.rs  hub.rs  mod.rs  server.rs  state.rs
crates/plugin-core/src/servers/workflows/: api.rs  mod.rs  model.rs  scheduler.rs  server.rs  store.rs  worker.rs  workspace_client.rs
crates/plugin-core/src/servers/workflows/worker/: dag.rs  local.rs  step.rs
crates/plugin-core/src/servers/workspace/: api.rs  mod.rs  model.rs  store.rs
crates/plugin-core/src/servers/workspace/loader/: local.rs  mod.rs  s3.rs
rust/: Cargo.toml
rust/crates/common/src/: messaging.rs
rust/crates/common/src/logging/: macros.rs  mod.rs
rust/crates/common/src/logging/consumers/: console.rs  file.rs  mod.rs
rust/crates/common/src/plugin/: mod.rs
rust/crates/common/src/plugin/providers/: persistence.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/config/: access.rs  json_loader.rs  yaml_loader.rs
rust/crates/core/src/messaging/: mod.rs
rust/crates/core/src/plugin/: loaded.rs
rust/crates/plugin-core/src/executor/: container.rs  dummy.rs
rust/crates/plugin-core/src/persistence/: file.rs  mod.rs
rust/crates/plugin-core/src/servers/metrics/: mod.rs  rest_handler.rs  server.rs
rust/crates/plugin-core/src/servers/rest/: auth.rs  mod.rs  server.rs  statics.rs
rust/crates/plugin-core/src/servers/workflows/: model.rs
rust/crates/plugin-k8s/src/: executor.rs
rust/crates/plugin-opa/: Cargo.toml
rust/orkester/: Cargo.toml  config.yaml  target.md
rust/orkester-core/: Cargo.toml  logs.txt
rust/orkester-core/crates/orkester/: Cargo.toml
rust/orkester-core/crates/orkester-plugin/: Cargo.toml
rust/orkester-core/crates/orkester-plugin-test/: Cargo.toml
rust/orkester-core/crates/orkester-plugin-test/src/: constants.rs  lib.rs  plugin.rs  protocol.rs  util.rs
rust/orkester-core/crates/orkester-plugin/src/: __private.rs  lib.rs  macros.rs  private.rs
rust/orkester-core/crates/orkester/src/: handler.rs  main.rs
rust/orkester/crates/orkester-host/: Cargo.toml
rust/orkester/crates/orkester-host/src/: catalog.rs  config.rs  hub.rs  logging.rs  main.rs  pipeline.rs  registry.rs  runner.rs  server.rs
rust/orkester/crates/orkester-macro/: Cargo.toml  target_usage.rs
rust/orkester/crates/orkester-macro/src/: lib.rs
rust/orkester/crates/orkester-plugin/: Cargo.toml  example.rs
rust/orkester/crates/orkester-plugin-core-rest/: Cargo.toml
rust/orkester/crates/orkester-plugin-core-rest/src/: lib.rs  root.rs
rust/orkester/crates/orkester-plugin-logging/: Cargo.toml
rust/orkester/crates/orkester-plugin-logging/src/: lib.rs  root.rs
rust/orkester/crates/orkester-plugin-metrics/: Cargo.toml
rust/orkester/crates/orkester-plugin-metrics/src/: lib.rs  root.rs
rust/orkester/crates/orkester-plugin-sample/: Cargo.toml
rust/orkester/crates/orkester-plugin-sample/src/: calculator.rs  counter.rs  echo.rs  lib.rs  ping.rs  root.rs
rust/orkester/crates/orkester-plugin/src/: example.rs  lib.rs  prelude.rs
rust/orkester/crates/orkester-plugin/src/abi/: mod.rs
rust/orkester/samples/: config.yaml
rust/poc1/: orkester-config.yaml  run.sh
rust/poc1/crates/common/src/: domain.rs  lib.rs
rust/poc1/crates/core/src/: main.rs  management.rs
rust/poc1/crates/plugin-core/: Cargo.toml
rust/poc1/crates/plugin-core/src/: authz.rs
rust/poc1/crates/plugin-k8s/: Cargo.toml
rust/poc1/crates/plugin-k8s/src/: lib.rs
rust/workaholic/: Cargo.toml  README.md
rust/workaholic/crates/orkester-plugin-workaholic/: Cargo.toml
rust/workaholic/crates/orkester-plugin-workaholic-aws/: Cargo.toml
rust/workaholic/crates/orkester-plugin-workaholic-aws/src/: lib.rs
rust/workaholic/crates/orkester-plugin-workaholic-opa/: Cargo.toml
rust/workaholic/crates/orkester-plugin-workaholic-opa/src/: lib.rs
rust/workaholic/crates/orkester-plugin-workaholic-sql/: Cargo.toml
rust/workaholic/crates/orkester-plugin-workaholic-sql/src/: lib.rs
rust/workaholic/crates/orkester-plugin-workaholic/rm-src/: host_client.rs  lib.rs  root.rs
rust/workaholic/crates/orkester-plugin-workaholic/src/: host_client.rs  lib.rs  root.rs
rust/workaholic/crates/workaholic/: Cargo.toml
rust/workaholic/crates/workaholic/src/: actions.rs  document.rs  error.rs  lib.rs  loader.rs  parser.rs  persistence.rs  traits.rs
(+369 files in other folders)
