[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/common",
    "crates/plugin-core",
]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
orkester-common    = { path = "crates/common" }
