[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/common",
    "crates/plugin-core",
    "crates/plugin-k8s",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
orkester-common    = { path = "crates/common" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1