[package]
name = "orkester-common"
version = "0.1.0"
edition = "2021"
description = "Shared types, traits, and plugin interfaces for Orkester"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
