[package]
name = "orkester-plugin-core"
version = "0.1.1"
edition = "2021"
description = "Built-in core plugin for Orkester: default implementations of all extensibility points"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orkester-common = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.7"
serde_yaml = "0.9"
notify = "6"
