[workspace]
resolver = "3"
members = [
    "crates/orkester",
    "crates/orkester-plugin",
    "crates/orkester-plugin-test",
]

[workspace.dependencies]
orkester-plugin    = { path = "crates/orkester-plugin" }

[profile.release]
strip = true        # Automatically strip symbols from the binary.
lto = true          # Use Linked Time Optimization
codegen-units = 1   # Single code generator to optimize the size