[workspace]
resolver = "3"
members = [
    "crates/orkester-host",
    "crates/orkester-macro",
    "crates/orkester-plugin",
    "crates/orkester-plugin-logging",
    "crates/orkester-plugin-sample",
    "crates/orkester-plugin-metrics",
]

[profile.release]
strip = true        # Automatically strip symbols from the binary.
lto = true          # Use Linked Time Optimization
codegen-units = 1   # Single code generator to optimize the size