[package]
name = "orkester"
version = "0.1.0"
edition = "2024"
description = "Orkester – ultra-fast, resilient and secure workflow platform"

[[bin]]
name = "orkester"
path = "src/main.rs"

[dependencies]
orkester-plugin   = { workspace = true }
ctrlc             = "3"
clap              = { version = "4", features = ["derive"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
libloading        = "0.9"