[package]
name = "orkester"
version = "0.1.0"
edition = "2024"
description = "Orkester – ultra-fast, resilient and secure workflow platform"

[[bin]]
name = "orkester"
path = "src/main.rs"

[dependencies]
orkester-plugin   = { workspace = true }
anyhow            = "1"
clap              = { version = "4", features = ["derive"] }
ctrlc             = "3"
serde_json        = "1"