[package]
name = "orkester-plugin-core-rest"
version = "0.1.0"
edition = "2024"
description = "Axum-based REST server plugin for Orkester."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orkester-plugin = { path = "../orkester-plugin" }
orkester-macro  = { path = "../orkester-macro" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
log        = "0.4"

axum       = "0.7"
tokio      = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
