[package]
name = "orkester-plugin-logging"
version = "0.1.0"
description = "Logging plugin providing LoggingServer with configurable sinks and formatters."
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orkester-plugin = { path = "../orkester-plugin" }
orkester-macro  = { path = "../orkester-macro" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_yaml      = "0.9"
crossbeam-channel = "0.5"
log             = "0.4"
chrono          = "0.4"