[package]
name = "orkester-plugin-metrics"
version = "0.1.0"
description = "Metrics server plugin — records metric events and exposes snapshots and history."
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orkester-plugin = { path = "../orkester-plugin" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
log        = "0.4"
