[package]
name = "orkester-plugin-sample"
version = "0.1.0"
description = "Example plugin for Orkester: logger, calculator, counter, and more."
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orkester-plugin = { path = "../orkester-plugin" }
orkester-macro  = { path = "../orkester-macro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
