[package]
name = "orkester-plugin-sample"
version = "0.1.0"
description = "Sample plugin demonstrating PingServer, LoggingServer, and RestServer."
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orkester-plugin = { path = "../orkester-plugin" }
orkester-macro  = { path = "../orkester-macro" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
log               = "0.4"
tiny_http         = "0.12"
crossbeam-channel = "0.5"
