[package]
name = "orkester-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
orkester-macro = { path = "../orkester-macro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"
libloading = "0.9"
crossbeam-channel = "0.5"
regex = "1"
log = "0.4"
indexmap = { version = "2", features = ["serde"] }