[package]
name = "orkester-plugin-k8s"
version = "0.1.0"
edition = "2021"
description = "Kubernetes executor plugin for Orkester — runs tasks as ephemeral Pods"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# Select the Kubernetes API version to compile against.
# Because k8s-openapi forbids library crates from enabling version features
# directly, we forward through our own feature.  The `default` feature picks
# a sensible recent version; override via --no-default-features --features k8s-v1-30.
[features]
default     = ["k8s-v1-31"]
k8s-v1-29   = ["k8s-openapi/v1_29"]
k8s-v1-30   = ["k8s-openapi/v1_30"]
k8s-v1-31   = ["k8s-openapi/v1_31"]

[dependencies]
orkester-common = { workspace = true }
async-trait     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
uuid            = { version = "1", features = ["v4"] }
# k8s-openapi version must match what kube 0.98 resolves to (0.24.x).
# Do NOT specify a version feature here; it is activated via the [features] above.
k8s-openapi = { version = "0.24", default-features = false }
kube = { version = "0.98", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }
