[package]
name = "orkester-plugin-workaholic-aws"
version = "0.1.0"
edition = "2024"
description = "AWS execution extensions for orkester-plugin-workaholic."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orkester-plugin-workaholic = { path = "../orkester-plugin-workaholic" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
